modified:   19tet.html 	new file:   home.png 	modified:   index.html 	new file:   index.png

--- a/19tet.html
+++ b/19tet.html
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
             text-align: center;
             margin: 0; /* Remove default margin */
-            padding-top: 50px; /* Top padding */
+            padding-top: 30px; /* Top padding */
         }
 
         .title {
@@ -141,6 +141,9 @@
     </style>
 </head>
 <body>
+    <a href="index.html" style="position: absolute; top: 10px; left: 10px;">
+        <img src="home.png" alt="Home" style="width: 30px; height: 30px;">
+    </a>
     <div class="title">
         19-Tone Equal Temperament
     </div>
