--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" href="favicon.png" type="image/x-icon">
-    <title>19-Tone Equal Temperament</title>
+    <link rel="icon" href="index.png" type="image/x-icon">
+    <title>Jerry.X.Wang's Website</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 0; /* Remove default margin */
-            padding-top: 50px; /* Top padding */
+            text-align: left;
+            margin: 0;
+            padding-top: 30px; /* Top padding */
         }
 
         .title {
@@ -28,6 +28,21 @@
             text-align: center; 
             font-weight: bold;
         }
+
+        .link {
+            text-align: center; /* 修改为左对齐 */
+            color: blue;
+            font-size: 18px;
+        }
+        
+        .link a {
+            text-decoration: none; /* 默认没有下划线 */
+            color: inherit; /* 继承父元素的颜色 */
+        }
+
+        .link a:hover {
+            text-decoration: underline; /* 鼠标悬停时有下划线 */
+        }
     </style>
 </head>
 <body>
@@ -37,9 +52,9 @@
     <div class="title-cn">
         欢迎来到 Jerry.X.Wang 的网站！
     </div>
-    <div class="button" id="19tet">
+    <div class="link" id="19tet">
         <a href="19tet.html">
-            19-Tone Equal Temperament
+            19-Tone Equal Temperament 十九平均律
         </a>
     </div>
 </body>
