--- a/19tet.html
+++ b/19tet.html
@@ -141,7 +141,7 @@
     </style>
 </head>
 <body>
-    <a href="index.html" style="position: absolute; top: 10px; left: 10px;">
+    <a href="/" style="position: absolute; top: 10px; left: 10px;">
         <img src="home.png" alt="Home" style="width: 30px; height: 30px;">
     </a>
     <div class="title">
