modified:   index.html

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         Welcome to Jerry.X.Wang's website!
     </div>
     <div class="title-cn">
-        欢迎来到 Jerry.X.Wang 的网站！
+        欢迎来到王新昊的网站！
     </div>
     <div class="link" id="19tet">
         <a href="19tet.html">
