modified:   19tet.html 	modified:   index.html   added pedal feature, just like pedal on the piano

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Arial;
             text-align: left;
             margin: 0;
             padding-top: 30px; /* Top padding */
@@ -16,7 +16,7 @@
         .title {
             font-size: 32px; 
             margin-bottom: 20px; 
-            font-family: 'Times New Roman', Times, serif; 
+            font-family: sans-serif; 
             text-align: center; 
             font-weight: bold;
         }
@@ -24,24 +24,24 @@
         .title-cn {
             font-size: 24px; 
             margin-bottom: 20px; 
-            font-family: '宋体'; 
+            font-family: "宋体"; 
             text-align: center; 
             font-weight: bold;
         }
 
         .link {
-            text-align: center; /* 修改为左对齐 */
+            text-align: center;
             color: blue;
             font-size: 18px;
         }
         
         .link a {
-            text-decoration: none; /* 默认没有下划线 */
-            color: inherit; /* 继承父元素的颜色 */
+            text-decoration: none; 
+            color: inherit; 
         }
 
         .link a:hover {
-            text-decoration: underline; /* 鼠标悬停时有下划线 */
+            text-decoration: underline; /* Underline the link when mouse cursor hovers over it */
         }
     </style>
 </head>
@@ -54,7 +54,7 @@
     </div>
     <div class="link" id="19tet">
         <a href="19tet.html">
-            19-Tone Equal Temperament 十九平均律
+            19-Tone Equal Temperament Instrument 十九平均律乐器
         </a>
     </div>
 </body>
