modified:   19tet.html

--- a/19tet.html
+++ b/19tet.html
@@ -372,6 +372,11 @@
             oscillators[key].stop(currentTime + time);
             delete oscillators[key];
             delete gainNodes[key];
+
+            if (activeKeys.has(key)) {
+                activeKeys.delete(key);
+            }
+
             updateFrequencyDisplay();
         }
 
