fixed bug when changing octave 	modified:   19tet.html

--- a/19tet.html
+++ b/19tet.html
@@ -425,11 +425,13 @@
                         octave--;
                         document.getElementById('octave').value = octave; 
                         updateActiveFrequencies(); 
+                        updateFrequencyDisplay();
                         break;
                     case 'ArrowUp': 
                         octave++;
                         document.getElementById('octave').value = octave; 
                         updateActiveFrequencies(); 
+                        updateFrequencyDisplay();
                         break;
                     case ' ':
                         pressPedal();
