--- a/19tet.html
+++ b/19tet.html
@@ -66,7 +66,7 @@
         }
 
         button:active {
-            background-color: #ddd; /* Change background color on press */
+            background-color: #ddd;
         }
     
         #volume {
@@ -132,6 +132,7 @@
         }
 
         .control select {
+            color: black;
             width: 124px; 
             height: 24px;
             border: 2px solid #bbb; 
@@ -161,7 +162,7 @@
     </style>
 </head>
 <body>
-    <a href="/" style="position: absolute; top: 5px; left: 5px;">
+    <a href="/" title="Home" style="position: absolute; top: 5px; left: 5px;">
         <img src="home.png" alt="Home" style="width: 30px; height: 30px;">
     </a>
     <div class="title">
@@ -179,8 +180,8 @@
         <div class="control">
             <label for="octave">Octave</label>
             <input type="number" id="octave" step="1" pattern="[0-9]*">
-            <button id="octaveDecrease">-</button>
-            <button id="octaveIncrease">+</button>
+            <button id="octaveDecrease" title="(ArrowDown ↓)">-</button>
+            <button id="octaveIncrease" title="(ArrowUp ↑)">+</button>
         </div>
 
         <div class="control">
@@ -206,8 +207,8 @@
                 <option value=17>B</option>
                 <option value=18>B#(C♭)</option>
             </select>
-            <button id="keyDecrease">-</button>
-            <button id="keyIncrease">+</button>
+            <button id="keyDecrease" title="(ArrowLeft ←)">-</button>
+            <button id="keyIncrease" title="(ArrowRight →)">+</button>
         </div>
 
         <div class="control">
