Let the halfLife in soundType piano can change with frequency.

--- a/19tet.html
+++ b/19tet.html
@@ -366,9 +366,9 @@
                     break;
                 case 'sine':
                     if (freq >= 440) {
-                        gainNode.gain.value = (440/freq)**0.5 * volume;
+                        gainNode.gain.value = volume * (440/freq)**0.5;
                     } else {
-                        gainNode.gain.value = 440/freq * volume;
+                        gainNode.gain.value = volume * 440/freq;
                     }
                     break;
                 case 'square':
@@ -378,7 +378,7 @@
                     gainNode.gain.value = volume;
                     break;
                 case 'triangle':
-                    gainNode.gain.value = (440/freq)**0.5 * volume;
+                    gainNode.gain.value = volume * (440/freq)**0.5;
                     break;
             } 
 
@@ -391,13 +391,13 @@
             switch (soundMode) {
                 case 'piano':
                     const currentGain = gainNodes[keyCode].gain.value;
-                    const halfLife = 0.5; // unit: second
+                    const halfLife = 0.5 * (440/freq)**0.3; // unit: second
                     const currentTime = audioContext.currentTime;
                     let gain = currentGain;
 
                     const gainCurve = t => currentGain * (0.5 ** (1 / halfLife)) ** (t**0.5); // exponential function with given halfLife
                     let time = 0
-                    for (; gain >= 0.001; time += 0.01) { // set the gains from now on, until it's too quiet
+                    for (; gain >= 0.0001; time += 0.01) { // set the gains from now on, until it's too quiet
                         gain = gainCurve(time);
                         gainNodes[keyCode].gain.setValueAtTime(gain, currentTime + time);
                     }
