--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
             text-decoration: underline; /* Underline the link when mouse cursor hovers over it */
         }
     </style>
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?07a429e5188f6f9094684adbf5b59ff9";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
 </head>
 <body>
     <div class="title">
