Changed 19-Tone Equal Temperament to 19-TET Fixed the link in index.html.

--- a/19tet/19tet.html
+++ b/19tet/19tet.html
@@ -22,7 +22,7 @@
 <img src="/home.png" alt="Home" style="width: 30px; height: 30px;">
 </a>
 <div class="title">
-19-Tone Equal Temperament Instrument
+19-TET Instrument
 </div>
 <div class="container">
 
