--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         欢迎来到王新昊的网站！
     </div>
     <div class="link" id="19tet">
-        <a href="19tet.html">
-            19-Tone Equal Temperament Instrument 十九平均律乐器
+        <a href="/19tet/19tet.html">
+            19-TET Instrument 十九平均律乐器
         </a>
     </div>
 </body>
