--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="title-cn">
         欢迎来到王新昊的网站！
     </div>
-    <img src="selfie.png" alt="Jerry.X.Wang" style="position: absolute; width: 200px; right: 50px; top: 50px">
+    <img src="selfie.png" alt="Jerry.X.Wang" style="position: absolute; width: 200px; right: 30px; top: 30px; z-index: -1;">
     <div class="link" id="19tet">
         <a href="/19tet/19tet.html">
             19-TET Instrument 十九平均律乐器
