Added bouncy balls project

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             text-align: center;
             color: blue;
             font-size: 18px;
+            margin: 10px 0;
         }
         
         .link a {
@@ -65,6 +66,11 @@
     <div class="link" id="19tet">
         <a href="/19tet/19tet.html">
             19-TET Instrument 十九平均律乐器
+        </a>
+    </div>
+    <div class="link" id="bouncy_balls">
+        <a href="/bouncy_balls/bouncy_balls.html">
+            Bouncy Balls 弹球
         </a>
     </div>
 </body>
