Added project make24 Modified index.html and 19tet.css

--- a/index.html
+++ b/index.html
@@ -62,15 +62,19 @@
     <div class="title-cn">
         欢迎来到王新昊的网站！
     </div>
-    <img src="selfie.png" alt="Jerry.X.Wang" style="position: absolute; width: 200px; right: 30px; top: 30px; z-index: -1;">
     <div class="link" id="19tet">
         <a href="/19tet/19tet.html">
-            19-TET Instrument 十九平均律乐器
+            19-TET Instrument / 十九平均律乐器
         </a>
     </div>
     <div class="link" id="bouncy_balls">
         <a href="/bouncy_balls/bouncy_balls.html">
-            Bouncy Balls 弹球
+            Bouncy Balls / 弹球
+        </a>
+    </div>
+    <div class="link" id="bouncy_balls">
+        <a href="/make24/make24.html">
+            Make 24 / 24点
         </a>
     </div>
 </body>
