--- a/make24/make24.html
+++ b/make24/make24.html
@@ -26,7 +26,8 @@
     </div>
 
     <div class="container" style="justify-content: center;">
-        <button class="button" onclick="confirmInputs()">Calculate</button>
+        <button class="button" onclick="randomNumbers()" id="random">Random</button>
+        <button class="button" onclick="confirmNumbers()" id="confirm">Calculate</button>
     </div>
     <div class="container" style="justify-content: center;">
         <div class="text" id="output" style="text-align: center;"></div>
