Changed the ball collision from spring elastic to rigid elastic

--- a/bouncy_balls/bouncy_balls.html
+++ b/bouncy_balls/bouncy_balls.html
@@ -18,9 +18,10 @@
             top: 0px;
             left: 0px;
             color: grey;
-            font-family: Arial, sans-serif;
-            font-size: 20px;
+            font-family: consolas;
+            font-size: 16px;
             padding: 5px;
+            line-height: 1;
         }
 
         canvas {
