--- a/bouncy_balls/bouncy_balls.html
+++ b/bouncy_balls/bouncy_balls.html
@@ -33,8 +33,8 @@
     </style>
 </head>
 <body>
-    <a href="/" title="Home" style="position: absolute; top: 5px; right: 35px;">
-        <img src="/home.png" alt="Home" style="position: absolute; width: 30px; height: 30px;">
+    <a href="/" title="Home" style="position: absolute; top: 5px; right: 5px;">
+        <img src="/home.png" alt="Home" style="width: 30px; height: 30px;">
     </a>
     <canvas id="canvas"></canvas>
     <div id="info"></div>
