Added selfie again

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <div class="title-cn">
         欢迎来到王新昊的网站！
     </div>
+    <img src="selfie.png" alt="Jerry.X.Wang" style="position: absolute; height: 30%; right: 5px; bottom: 5px">
     <div class="link" id="19tet">
         <a href="/19tet/19tet.html">
             19-TET Instrument / 十九平均律乐器
@@ -72,7 +73,7 @@
             Bouncy Balls / 弹球
         </a>
     </div>
-    <div class="link" id="bouncy_balls">
+    <div class="link" id="make24">
         <a href="/make24/make24.html">
             Make 24 / 24点
         </a>
