--- a/bouncy_balls/bouncy_balls.html
+++ b/bouncy_balls/bouncy_balls.html
@@ -30,6 +30,10 @@
             display: block;
             background-color: #fff;
         }
+
+        .text {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
     </style>
 </head>
 <body>
