--- a/bpm_test/bpm_test.html
+++ b/bpm_test/bpm_test.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="bpm_test.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BPM Tester</title>
+    <title>BPM Test</title>
     <link rel="stylesheet" href="bpm_test.css">
 </head>
 <body>
