Added link to bpm test

--- a/index.html
+++ b/index.html
@@ -78,5 +78,10 @@
             Make 24 / 24点
         </a>
     </div>
+    <div class="link" id="bpm_test">
+        <a href="/bpm_test/bpm_test.html">
+            BPM Test / BPM 测试
+        </a>
+    </div>
 </body>
 </html>
