Adapted to touch input

--- a/bpm_test/bpm_test.html
+++ b/bpm_test/bpm_test.html
@@ -17,7 +17,7 @@
     </div>
     <div class="text" id="bpm"></div>
     <div>
-        <button id="tap" onmousedown="tap()">Tap here <br> or <br> Press any key</button>
+        <button id="tap">Tap here <br> or <br> Press any key</button>
     </div>
     <div>
         <button id="reset" onclick="reset()">Reset (Esc)</button>
