--- a/make24/make24.html
+++ b/make24/make24.html
@@ -33,5 +33,6 @@
         <div class="text" id="output" style="text-align: center;"></div>
     </div>
 
+    <script src="/utilities.js"></script>
     <script src="make24.js"></script>
 </html>
