Added toggleHidden button

--- a/make24/make24.html
+++ b/make24/make24.html
@@ -30,6 +30,9 @@
         <button class="button" onclick="confirmNumbers()" id="confirm">Calculate</button>
     </div>
     <div class="container" style="justify-content: center;">
+        <button class="button" onclick="toggleHidden()" id="toggleHidden" style="display: none;">Hide</button>
+    </div>
+    <div class="container" style="justify-content: center;">
         <div class="text" id="output" style="text-align: center;"></div>
     </div>
 
